--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,19 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": "./src",
+    "types": ["vite/client"],
+    "paths": {
+      "@hooks/*": ["hooks/*"],
+      "@config/*": ["config/*"],
+      "@components/*": ["components/*"],
+      "@models/*": ["models/*"],
+      "@pages/*": ["Pages/*"],
+      "@services/*": ["services/*"],
+      "@type/*": ["types/*"]
+    }
   },
-  "include": ["src"],
+  "include": ["src/**/*", "vite.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
