--- a/package.json
+++ b/package.json
@@ -5,15 +5,37 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "docker": "docker build -t todolist-firebase . && docker run -d -p 30:5173 --name todo-firebase todolist-firebase",
+    "start:docker": "docker run -d -p 30:5173 todolist-firebase",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdx-js/react": "^3.1.0",
+    "@mdxeditor/editor": "^3.20.0",
+    "@types/mdx": "^2.0.13",
+    "@uiw/react-markdown-preview": "^5.1.3",
+    "@uiw/react-md-editor": "^4.0.5",
+    "clsx": "^2.1.1",
     "firebase": "^10.5.2",
     "flowbite": "^2.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "rehype-document": "^7.0.3",
+    "rehype-format": "^5.0.1",
+    "rehype-sanitize": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-directive": "^3.0.0",
+    "remark-extended-table": "^2.0.2",
+    "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.1",
+    "remark-stringify": "^11.0.0",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@types/firebase": "^2.4.32",
